{
    "name": "PlayerInputAction",
    "maps": [
        {
            "name": "Player",
            "id": "9d744dae-2896-475e-8cd1-4b4f7839e432",
            "actions": [
                {
                    "name": "Jump",
                    "type": "Button",
                    "id": "3d03fc6c-7fef-401b-bdd4-128a9802dec2",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                },
                {
                    "name": "PlayPiri",
                    "type": "Button",
                    "id": "307f2969-2b68-44dc-a700-6ec34b916355",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                },
                {
                    "name": "EchoGuard",
                    "type": "Button",
                    "id": "8c7cf396-83ff-4b17-b2b8-a98eae8f2202",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                },
                {
                    "name": "PurifyingStep",
                    "type": "Button",
                    "id": "9d533539-e53d-444d-945f-8b0016990ba4",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                }
            ],
            "bindings": [
                {
                    "name": "",
                    "id": "986de55b-72df-498c-bf8f-24f523a13501",
                    "path": "<Keyboard>/space",
                    "interactions": "Press",
                    "processors": "",
                    "groups": "",
                    "action": "Jump",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "4e86639e-4121-402c-837d-ebe172413efe",
                    "path": "<Keyboard>/w",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "PlayPiri",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "96a8413e-0a6d-4c13-90cc-428d43562c59",
                    "path": "<Mouse>/rightButton",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "EchoGuard",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "49fc06c1-ebaa-48c1-8e9d-228316abfd48",
                    "path": "<Mouse>/leftButton",
                    "interactions": "Hold",
                    "processors": "",
                    "groups": "",
                    "action": "PurifyingStep",
                    "isComposite": false,
                    "isPartOfComposite": false
                }
            ]
        },
        {
            "name": "Wolf",
            "id": "df61e026-149e-4405-8c3d-3641605a43d7",
            "actions": [
                {
                    "name": "Move",
                    "type": "Button",
                    "id": "2b8ea9f6-d178-4102-b94b-50ab5c17ba0f",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                },
                {
                    "name": "Attack",
                    "type": "Button",
                    "id": "298ca906-ba0f-4cfc-b32d-ea38c120e9f3",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                }
            ],
            "bindings": [
                {
                    "name": "",
                    "id": "98dd8424-9456-44b4-83ba-844bf808a319",
                    "path": "<Mouse>/leftButton",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Move",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "66942b4b-60c8-41d0-8c2b-36a8b576e202",
                    "path": "<Mouse>/rightButton",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Attack",
                    "isComposite": false,
                    "isPartOfComposite": false
                }
            ]
        }
    ],
    "controlSchemes": []
}